Linted js files with jshint
Included unused variable warning and suppressed === null warning in mparticle.js.
Assumed == null checks were used to check null and undefined together.
Changing == to === in null checks broke 7 tests.

--- a/test/index.html
+++ b/test/index.html
@@ -24,7 +24,7 @@
     </script>
     <script src="../mparticle.js" data-cover></script>
 
-    <script>mocha.setup('bdd')</script>
+    <script>mocha.setup('bdd');</script>
 
     <script src="tests.js"></script>
     <script>
